# wind-ae

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: draft-pdf.yml  python-pkg.yml
JOSS_paper/: ASCL_prep  draft-pdf.yml  paper.bib  paper.md
McAstro/: requirements.txt
McAstro/atoms/: Optically_Thin_Species.ipynb  atomic_masses.csv  atomic_species_old.py
McAstro/radiation/: radiative_transfer.py
Notebooks/: HD189733b_Example.ipynb  Quickstart.ipynb  Tutorial.ipynb
docs/: conf.py  index.rst  inputs.html  inputs.rst  installation.rst  metals.html  physics.html  relax_wind.rst  requirements.txt  spectrum.html  spectrum.rst  system.html  usage.rst  windsoln.rst
ext/nrecipes/: bsstep.c  (+4 more)
inputs/: add_params.inp  bcs.inp  goal_spectrum.inp  guess.inp  phys_params.inp  planet_params.inp  spectrum.inp  tech_params.inp  term_ind.inp
saves/: start_HotJupiter_EUV_H-He.csv  start_HotJupiter_EUV_H.csv  start_HotJupiter_XUV_H.csv  start_Neptune_H-He.csv  start_Neptune_XUV_H-He.csv  start_SuperEarth_EUV_H-He.csv  temp.csv  temptemp.csv  windsoln.csv
src/: Makefile  defs-master.h  defs.h  glq_rates.c  io.c  soe.c  wind.h
tests/: test_bcs.py  test_load_planet.py  test_metals.py  test_misc.py  test_physics.py  test_polish_bcs.py  test_ramp_to.py  test_run_wind.py  test_spectrum.py  test_system.py  test_windsoln.py
wind_ae/: __init__.py
wind_ae.egg-info/: PKG-INFO  README.md  SOURCES.txt  requires.txt  setup.py  top_level.txt
wrapper/: imports.py  relax_wrapper.py  requirements.txt
(+1444 files in other folders)
