[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wind_ae"
version = "0.5.10"
authors = [
    { name = "Madelyn Broome" },
    { name = "John McCann" },
    { name = "Ruth Murray-Clay" }
]
description = "1D relaxation Parker wind model with metal and X-ray physics based on Murray-Clay et al. (2009)"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"

dependencies = [
    "scipy>1.6",
    "numpy", 
    "astropy",
    "IPython",
    "pandas>=2.2.3",
    "matplotlib", 
    "datetime", 
    "pyarrow", 
    "fastparquet",
    "requests",
    "ChiantiPy",
    "pytest"
]

[project.urls]
Homepage = "https://github.com/mibroome/wind_ae"
Issues = "https://github.com/mibroome/wind_ae/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}
